--- a/.env.example
+++ b/.env.example
@@ -2,19 +2,19 @@
 # Copy this file to .env and fill in your values
 
 # Your server's public IP address (auto-detected if not set)
-NODE_IP=""
+export P2P_IP=""
 
 # Sepolia Ethereum RPC URL (get from Alchemy or MetaMask)
 # Example: https://eth-sepolia.g.alchemy.com/v2/YOUR_API_KEY
-L1_RPC_URL=""
+export ETHEREUM_HOSTS=""
 
 # Sepolia Ethereum Beacon Chain URL (get from Chainstack)
-# Example: https://nd-123-456-789.p2pify.com/YOUR_API_KEY
-L1_CONSENSUS_URL=""
+# Example: https://ethereum-sepolia.core.chainstack.com/beacon/YOUR_API_KEY
+export L1_CONSENSUS_HOST_URLS=""
 
 # Your EVM wallet private key (with 0x prefix)
 # Make sure this wallet is funded with Sepolia ETH
-VALIDATOR_PRIVATE_KEY=""
+export VALIDATOR_PRIVATE_KEY=""
 
 # The wallet address associated with the private key above
-COINBASE_ADDRESS="" 
+export COINBASE="" 
